--- a/vignettes/vignette.Rnw
+++ b/vignettes/vignette.Rnw
@@ -123,7 +123,7 @@ tdm <- as.TermDocumentMatrix(parties, "word")
 class(tdm) # to see what it is
 show(tdm)
 m <- as.matrix(tdm) # turn it into an ordinary matrix
-# m[c("Integration", "Zuwanderung", "Ausländer", "Migration"),]
+m[c("Integration", "Zuwanderung", "Migration"),]
 @
 
 
