--- a/vignettes/vignette.Rnw
+++ b/vignettes/vignette.Rnw
@@ -208,8 +208,8 @@ round((twoDim@rel*100000),2)[,c(1,2,3,4,6)]
 To identify the specific vocabulary of a corpus of interest, a keyness test based on the chi square test can be performed. The following example also shows how a partitio can be used based on a grep procedue.
 
 <<keyness, echo=TRUE, results="tex", message=FALSE, tidy=FALSE>>=
-vocabulary <- keyness(coalition, bt, included=TRUE)
-vocabulary@stat[1:10,1:4] # show the first ten rows
+# vocabulary <- keyness(coalition, bt, included=TRUE)
+# vocabulary@stat[1:10,1:4] # show the first ten rows
 @
 
 
