--- a/NEWS
+++ b/NEWS
@@ -1,28 +1,20 @@
-Planned changes:
- * proper documentation for tf method
- * tf will not work if a token is not in corpus
- * tf without token > all tokens
- * split fails if metadata are absent - to be changed
- * proper documentation for trim method needed
- * meta method for convenient access to metadata
- * context function needs explicit statement of posFilter
- * proper documentation for tf
- * use tf to get relative frequencies
- * tf as character method (then freq in whole corpus)
- * tf using grep
- * partition > check that corpus exists
- * dispersion > enricht if required metadata are not available
- * drop for dispersion results as method
- * warning for tf if names for partitions are missing
- * tf for simple string 
- * integrate addPos to enrich and document properly
- * partitionCluster -> simplify sAttribute Values
- * encoding of metadata tables is not adjusted > implemented, check result
- * dropping a cluster with name "" not possible for partition cluster
- * set Encoding of partition labels in partition cluster to partition encoding
- * partitionCluster function will not prepare corpora for Umlaute 
- * dispersion needs metadata to be initialised - check this
- * order of partition, query in dispersion function
+planned changes:
+ * search method [drafting has begun]
+
+v0.4.28
+ * reorganization of the code in files so that shift to S4 methods is reflected
+ * documentation for trim method [to be checked]
+ * documentation for enrich method [to be checked]
+ * addPos method integrated into enrich method [to be checked]
+ * addPos is kept as a method, but not exported into namespace
+ * set up of missing metadata for dispersion [to be checked]
+ * warning if labels are missing in tf method for partitionCluster
+ * Encoding of partition labels adjusted to encoding of console
+ * adjust encoding for input to partitionCluster
+ * speeches method is drafted at end of partition.R [final development, debugging]
+ * context method: no explicit statement of posFilter required [to be checked]
+ * methods for adjusting crosstab objects fused into trim,crosstab-method [needs to be checked]
+
 
 v0.4.27
  * context and contextCluster functions turned into methods
