--- a/NEWS
+++ b/NEWS
@@ -2,14 +2,14 @@ planned changes:
 ----------------
  * proper documentation for kwic
  * proper documentation for trim/enrich method for keyness
- * to be fixed: dispersion (2dim) requires meta to be set up - breaks if not
- * empty partition generates error - more verbose output desired
- * allow for multicore in partitionCluster explicitly
 
 v0.4.31
  * some changes to context method:
     - whether to use multicore can be stated explicitly
     - stopwords renamed to stoplist, and a positivelist is introduced
+ * individual documentation for partitionCluster enrich-method
+ * NULL object returned for partition call if s-attribute/value-combination not available
+ * call to dispersion (2dim): metadata are set up if not available
 
 v0.4.30
  * minor bug fixes
