major modification of stat methods

--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,34 @@
 planned changes:
 ----------------
+ * names-method for partitionCluster, keynessCluster objects
+ * show-method for keynessCluster
+ * chisquare-method
+ * remove empty rows in keynessCluster-object
+ * multicore for keyness,partitionCluster-method
+ * show method for keynessCluster
  * documentation to be improved (kwic, keyness)
  * minus values for statistical tests if O < E in keyness and context method
  * log likelihood test for keyness method
  * check: rename keyness to tex
  * no documentation for keynessCluster-class (e.g. if I want to know the slots)
+ * in partition-constructur parallel computation of word lists
+ * in egoNetwork-method parallelisation
+ * egoNetwork as a method on data.frame resulting from collocations
+ * write documentation for as.matrix-method
+ * check: why are there no negative chiSquare-values with tail(keyness-object)
+
+v0.35
+ * textstat-class introduced to serve as superclass for keyness- and context- classes
+ * chisquare-, ll-, pmi-methods for statistics
+ * collocations-method developed
+
+v0.4.34
+ * plot-method for partitionCluster
+ * rm.blank-functionality extended
+
+v0.4.33
+ * code re-ordered
+
 
 v0.4.32
  * meta,character-method to learn about a corpus without first generating a partition
