--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 planned changes:
 ----------------
- * document tf as one rdname, link by "see also"
+ * turn .cpos2tf into a method (getTf)
  * label-method for partition and label() <- 
  * names-method for partitionCluster, keynessCluster objects
  * remove empty rows in keynessCluster-object
